# GifLoader

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wellee/gifloader/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gif.h  native-lib.cpp
app/src/main/java/com/wellee/gifloader/: GifHandle.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/wellee/gifloader/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
